fix footer and add custom scrollbar in index

--- a/estilos/style-comandos.css
+++ b/estilos/style-comandos.css
@@ -46,7 +46,7 @@ body {
     border-top: 0.4px solid black;
     margin-bottom: 48px;
     padding: 110px;
-    padding-bottom: 95px;
+    padding-bottom: 28px;
     padding-top: 20px;
 }
 
