--- a/estilos/style-ozmaluco.css
+++ b/estilos/style-ozmaluco.css
@@ -46,8 +46,8 @@ body {
     border-top: 0.4px solid black;
     margin-bottom: 48px;
     padding: 110px;
-    padding-bottom: 110px;
-    padding-top: 20px;
+    padding-bottom: 309px;
+    padding-top: 100px;
 }
 
 .s1 {
