--- a/estilos/style.css
+++ b/estilos/style.css
@@ -178,3 +178,21 @@ p {
     align-items: center;
     justify-content: center;
 }
+
+body::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+    background-color: #212121;
+}
+
+body::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    background-color: #212121;
+}
+
+body::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+    background-color: rgb(255 255 255 / 10%);
+}
